[gd_scene load_steps=20 format=3 uid="uid://cgo4gdkg68dpx"]

[ext_resource type="Script" path="res://Scenes/UI/GUI/gui.gd" id="1_e1ev7"]
[ext_resource type="Script" path="res://Scenes/UI/GUI/hp.gd" id="2_gmnd3"]
[ext_resource type="Texture2D" uid="uid://m0sxg4glblx1" path="res://Assets/Items/Fruits/Apple.png" id="3_7pwmx"]
[ext_resource type="PackedScene" uid="uid://bitcbucr2kw1o" path="res://Scenes/UI/GUI/heart.tscn" id="4_l3eo5"]
[ext_resource type="PackedScene" uid="uid://eukpto2lftyx" path="res://Scenes/UI/GUI/pause_menu.tscn" id="6_cyhx4"]
[ext_resource type="Script" path="res://Scenes/UI/GUI/points_counter.gd" id="6_vofyj"]
[ext_resource type="PackedScene" uid="uid://b4l06swu3b0at" path="res://Scenes/UI/GUI/end_level_menu.tscn" id="8_4nxp0"]
[ext_resource type="Texture2D" uid="uid://bcx3a6mgcf6l3" path="res://Assets/Main Characters/Ninja Frog/Run (32x32).png" id="8_ds8pv"]
[ext_resource type="Texture2D" uid="uid://ohtovq14c0sy" path="res://Assets/Main Characters/Ninja Frog/Jump (32x32).png" id="9_26uh5"]
[ext_resource type="Texture2D" uid="uid://dnkxc85qtom2" path="res://Assets/Main Characters/Ninja Frog/Double Jump (32x32).png" id="10_228nd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1bpg"]
atlas = ExtResource("3_7pwmx")
region = Rect2(6, 4, 20, 20)

[sub_resource type="InputEventKey" id="InputEventKey_qldi1"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_iy3m3"]
events = [SubResource("InputEventKey_qldi1")]

[sub_resource type="AtlasTexture" id="AtlasTexture_480rb"]
atlas = ExtResource("8_ds8pv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_oto61"]
radius = 17.0

[sub_resource type="AtlasTexture" id="AtlasTexture_j10s6"]
atlas = ExtResource("8_ds8pv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46q8h"]
atlas = ExtResource("9_26uh5")

[sub_resource type="AtlasTexture" id="AtlasTexture_o1md7"]
atlas = ExtResource("10_228nd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_ogsfq"]
radius = 17.0

[node name="Gui" type="CanvasLayer"]
script = ExtResource("1_e1ev7")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
volume_db = -16.289
autoplay = true
bus = &"Music"

[node name="HP" type="GridContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 24.0
scale = Vector2(3.5, 3.5)
size_flags_horizontal = 4
theme_override_constants/h_separation = 5
columns = 5
script = ExtResource("2_gmnd3")

[node name="heart" parent="HP" instance=ExtResource("4_l3eo5")]
layout_mode = 2

[node name="heart2" parent="HP" instance=ExtResource("4_l3eo5")]
layout_mode = 2

[node name="heart3" parent="HP" instance=ExtResource("4_l3eo5")]
layout_mode = 2

[node name="heart4" parent="HP" instance=ExtResource("4_l3eo5")]
layout_mode = 2

[node name="heart5" parent="HP" instance=ExtResource("4_l3eo5")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -616.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 74.0
grow_horizontal = 0
theme_override_constants/separation = 20
alignment = 2

[node name="Points" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Points"]
layout_mode = 2
texture = SubResource("AtlasTexture_h1bpg")
expand_mode = 2

[node name="PointsCounter" type="Label" parent="HBoxContainer/Points"]
texture_filter = 2
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "x 0"
horizontal_alignment = 2
script = ExtResource("6_vofyj")

[node name="Pause" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_iy3m3")
text = "Pause [Esc]"

[node name="PauseMenu" parent="." instance=ExtResource("6_cyhx4")]
visible = false

[node name="EndLevelMenu" parent="." instance=ExtResource("8_4nxp0")]
visible = false

[node name="Controls" type="Node2D" parent="."]

[node name="Left" type="TouchScreenButton" parent="Controls"]
position = Vector2(138, 529)
scale = Vector2(-3, 3)
texture_normal = SubResource("AtlasTexture_480rb")
shape = SubResource("CircleShape2D_oto61")
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="Controls"]
position = Vector2(180, 529)
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_j10s6")
shape = SubResource("CircleShape2D_oto61")
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="Controls"]
position = Vector2(1021, 529)
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_46q8h")
shape = SubResource("CircleShape2D_oto61")
action = "jump"
visibility_mode = 1

[node name="Dash" type="TouchScreenButton" parent="Controls"]
position = Vector2(1021, 400)
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_o1md7")
shape = SubResource("CircleShape2D_ogsfq")
action = "dash"
visibility_mode = 1

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="pressed" from="HBoxContainer/Pause" to="." method="_on_pause_pressed"]
